home-k8s/pihole/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pihole
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pihole
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      containers:
      - name: pihole
        image: jacklul/pihole:latest
        securityContext:
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
            add:
              # Maybe we can get rid of these soon? https://github.com/pi-hole/docker-pi-hole/pull/1814
              - CHOWN
              - FOWNER
              - MKNOD
              - SETGID
              - SYS_CHROOT
              - AUDIT_WRITE
              - DAC_OVERRIDE
              - FSETID
              - KILL
#              - NET_RAW
              - SETPCAP
              - NET_BIND_SERVICE
              - SETFCAP
              - SETUID
        ports:
          - containerPort: 53
            name: dns
          - containerPort: 80
            name: http
        volumeMounts:
          - name: pihole
            mountPath: /etc/pihole
            subPath: etc/pihole
          - name: pihole
            mountPath: /etc/dnsmasq.d
            subPath: etc/dnsmasq.d
          - name: pihole
            mountPath: /etc/pihole-updatelists
            subPath: etc/pihole-updatelists
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
