home-k8s/pihole/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-http
spec:
  selector:
    app.kubernetes.io/name: pihole
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:  
  name: pihole-dns
spec:
  selector:
    app.kubernetes.io/name: pihole
  type: NodePort
  ports:  
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: dns
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: dns
